feat busca por filtros e background da aplicacao

--- a/front/paraibike/src/app/app.component.html
+++ b/front/paraibike/src/app/app.component.html
@@ -1,4 +1,5 @@
-<app-sidebar *ngIf="token">
+<app-sidebar>
+   <!-- <app-sidebar *ngIf="token"> -->
   <div class="container-fluid">
      <div class="row">
         <div class="col-md-12">
@@ -7,4 +8,6 @@
      </div>
   </div>
 </app-sidebar>
-<router-outlet *ngIf="!token"></router-outlet>
+<router-outlet></router-outlet>
+<!-- <router-outlet *ngIf="!token"></router-outlet> -->
+
