--- a/front/paraibike/src/app/components/bicicleta/listagem-bicicleta/listagem-bicicleta.component.scss
+++ b/front/paraibike/src/app/components/bicicleta/listagem-bicicleta/listagem-bicicleta.component.scss
@@ -6,3 +6,36 @@
   background-color: #1ca80a;
   color: white
 }
+
+
+.botoes{
+  margin-top: 1.5rem;
+  margin-left: 2rem;
+}
+
+.espacamento-select{
+  margin-left: 1rem;
+}
+
+.marca {
+  margin-left: 5rem;
+}
+
+.main-content {
+  background-image: url('/assets/images/Imagem3.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-bicicleta{
+  margin-bottom: 25rem;
+}
+
+.feedback{
+  margin-left: 6rem;
+  margin-top: 2rem;
+  font-weight: bold;
+}
