--- a/front/paraibike/src/app/components/login/login.component.scss
+++ b/front/paraibike/src/app/components/login/login.component.scss
@@ -42,3 +42,32 @@ input.form-control {
     margin-top: 1rem;
     margin-left: 9rem;
 }
+
+.logo{
+    height: 8rem;
+    width: 19rem;
+    color: black;
+    border-radius: 1rem;
+    background-color: #1BB1DA;
+    margin-left: 2rem;
+    margin-top: 1rem;
+}
+
+body {
+    background-image: url('/assets/images/Imagem1.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card{
+margin-right: 48rem;
+margin-bottom: 10rem;
+border-radius: 1rem;
+}
+  
+  
