--- a/front/paraibike/src/app/components/login/login.component.html
+++ b/front/paraibike/src/app/components/login/login.component.html
@@ -1,10 +1,12 @@
 <body>
 	<div class="container">
 		<div class="row justify-content-md-center">
-			<div class="example-card">
+			<div class="example-card card">
 				<div>
+					<img src="/assets/images/logo.png" class="logo">
 					<div class="d-flex align-items-center justify-content-center mt-4 mb-2">
-						<span class="mr-2">Login</span><i class="fa fa-user"></i>
+						<span class="mr-2">Login</span>
+						<!-- <i class="fa fa-user"></i> -->
 					</div>
 					<hr />
 					<form class="example-form" [formGroup]="formulario">
