--- a/front/paraibike/src/app/shared/template/sidebar/sidebar.component.html
+++ b/front/paraibike/src/app/shared/template/sidebar/sidebar.component.html
@@ -3,8 +3,13 @@
     <a class="sidebar-brand d-flex align-items-center justify-content-left">
     </a>
     <hr class="sidebar-divider">
+    <div>
+      
+    </div>
     <div class="sidebar-heading">
-      Menu Principal
+      <mat-icon>account_circle</mat-icon>
+      R$ {{ creditos }}
+      <p>Menu Principal</p>
     </div>
 
     <li class="nav-item">
@@ -21,6 +26,13 @@
       <a class="nav-link collapsed" (click)="mudarRota('listar-alugueis')">
         <i class="fa fa-wrench"></i>
         <span>Listar Alugueis</span>
+      </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link collapsed" (click)="mudarRota('listar-alugueis')">
+          <mat-icon style="font-size: 1rem;">add_shopping_cart</mat-icon>
+          <i class="fa-cpanel"></i> 
+        <span>Comprar créditos</span>
       </a>
     </li>
   </ul>
